--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.0.0",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
+    "react-dnd-touch-backend": "^0.3.17",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
